# kgfx

./: .gitmodules  CMakeLists.txt  cmake_win.bat
include/kgfx/: bezier.hpp  bezier_patch.hpp  event_handler.hpp  frame_time.hpp  mesh.hpp  my_glm.hpp  window.hpp
include/kgfx/opengl/: mesh.hpp  renderer.hpp  shader.hpp
src/kgfx/: CMakeLists.txt  event_handler.cpp  frame_time.cpp  window.cpp
src/kgfx/opengl/: check_opengl_error.hpp  mesh.cpp  renderer.cpp  shader.cpp
